[tool.poetry]
name = "test-infura"
version = "0.1.0"
description = ""
authors = ["Mathias Minacapili <mathias.minacapilli@mercadolibre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^6.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
